kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: homework-deployment
  labels:
    app: homework
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: homework
                  operator: In
                  values:
                    - "true"
      containers:
      - name: nginx
        image: nginx:1.29
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/example.conf
          subPath: example.conf
          readOnly: true
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: homework-volume
        emptyDir:
          sizeLimit: 10Mi
      - name: nginx-config-volume
        configMap:
          name: example-config
          items:
          - key: example.conf
            path: example.conf
